RESOLVED FIXED167862
Data interaction fails in Safari splitscreen mode when dropping into a contenteditable
https://bugs.webkit.org/show_bug.cgi?id=167862
Summary Data interaction fails in Safari splitscreen mode when dropping into a conten...
Wenson Hsieh
Reported 2017-02-05 18:07:15 PST
Data interaction fails in Safari splitscreen mode when dropping into a contenteditable
Attachments
Patch (3.09 KB, patch)
2017-02-05 18:10 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2017-02-05 18:09:32 PST
Wenson Hsieh
Comment 2 2017-02-05 18:10:26 PST
Wenson Hsieh
Comment 3 2017-02-05 22:00:07 PST
Comment on attachment 300679 [details] Patch Thanks Tim!
WebKit Commit Bot
Comment 4 2017-02-05 22:25:19 PST
Comment on attachment 300679 [details] Patch Clearing flags on attachment: 300679 Committed r211716: <http://trac.webkit.org/changeset/211716>
WebKit Commit Bot
Comment 5 2017-02-05 22:25:23 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.