Data interaction fails in Safari splitscreen mode when dropping into a contenteditable https://bugs.webkit.org/show_bug.cgi?id=167862 <rdar://problem/30368405>

Reviewed by Tim Horton.

Adds a counter to WebItemProviderPasteboard that can incremented, decremented, and queried by clients.

* platform/ios/WebItemProviderPasteboard.h:
* platform/ios/WebItemProviderPasteboard.mm:
(-[WebItemProviderPasteboard init]):
(-[WebItemProviderPasteboard hasPendingOperation]):
(-[WebItemProviderPasteboard incrementPendingOperationCount]):
(-[WebItemProviderPasteboard decrementPendingOperationCount]):


Canonical link: https://commits.webkit.org/184893@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211716 268f45cc-cd09-0410-ab3c-d52691b4dbfc